almost done. yourMovies displayed in home page

--- a/styles/home.css
+++ b/styles/home.css
@@ -10,12 +10,12 @@ margin-top:20px;
 border-radius:16px;
 }
 
-.navbar a{
+nav a{
   margin-right:10px;
   margin-left:10px;
 }
 
-.navbar a:first-child{
+nav a:first-child{
   font-size:12px;
 }
 
@@ -78,10 +78,41 @@ tr td:nth-child(5){
   background-color:#000000;
   color:#ffffff;
   width:40px;
+  padding-left:20px;
+padding-right:20px;
 }
 
 img{
   height:14px;
 }
 
+#time{
+  background-color:#ffffff;
+  padding-left:8px;
+  padding-right:8px;
+  font-size:8px;
+  padding-top:2px;
+  padding-bottom:2px;
+}
 
+#time-sign-minus{
+  background-color:#000000;
+  color:#ffffff;
+  font-size:6px;
+  font-weight:bold;
+  padding-top:3px;
+  padding-bottom:3px;
+  padding-left:4px;
+  padding-right:4px;
+}
+
+#time-sign-plus{
+  background-color:#000000;
+  color:#ffffff;
+  font-size:6px;
+  font-weight:bold;
+  padding-top:3px;
+  padding-bottom:3px;
+  padding-left:4px;
+  padding-right:4px;
+}
